BuildingsPy Changelog
---------------------

Version 5.2.0, xxxx
^^^^^^^^^^^^^^^^^^^

- In buildingspy/development/merger.py, added new comment form to allow excluding
  Modelica code for certain libraries.
  (https://github.com/lbl-srg/BuildingsPy/issues/566)
- In buildingspy/development/regressiontest.py, add option to create reference
  results in batch mode.
  (https://github.com/lbl-srg/BuildingsPy/issues/560)
- In buildingspy/development/regressiontest.py, add option to get the coverage
  rate, i.e., what percentage of examples are covered by regression tests.
  (https://github.com/lbl-srg/BuildingsPy/issues/253)
- For Optimica regression tests, added check for Integers that are too large to be represented
- In buildingspy/development/refactor.py, corrected moving images to avoid creating
  a directory if the target directory already exists.
  (https://github.com/lbl-srg/BuildingsPy/pull/548)
- In buildingspy/development/validator.py, added method validateHyperlinks()
  that searches for broken hyperlinks.
  (https://github.com/lbl-srg/BuildingsPy/issues/544)
- For Optimica regression tests, added check for connector to itself
  (https://github.com/lbl-srg/BuildingsPy/issues/504)
- In buildingspy/development/refactor.py, updated writing the Modelica
  package.order file to avoid changing the UsersGuide order.
  (https://github.com/lbl-srg/BuildingsPy/issues/541)


Version 5.1.0, April 9, 2024 -- Release 5.1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- In buildingspy/development/regressiontest.py, corrected bug that caused CI tests to not fail if run in batch
  mode and a reference file was missing.
- In buildingspy/io/outputfile.py, corrected error reporting for Dymola that caused a string index out of range.
  (https://github.com/lbl-srg/BuildingsPy/issues/536)
- Added support to generate unit test configuration file conf.yml
  for OpenModelica and Optimica tests.
  (https://github.com/lbl-srg/BuildingsPy/issues/530)

