@@ -4,6 +4,10 @@ BuildingsPy Changelog
 Version 5.2.0, xxxx
 ^^^^^^^^^^^^^^^^^^^
 
+- In buildingspy/development/simulationCompare.py, added option to skip verification of results.
+  The default is set to False and hence this change does not affect the behavior of scripts developed
+  for previous versions.
+  (https://github.com/lbl-srg/BuildingsPy/issues/568)
 - In buildingspy/development/merger.py, added new comment form to allow excluding
   Modelica code for certain libraries.
   (https://github.com/lbl-srg/BuildingsPy/issues/566)
